# whisper-gui

./: .env.example  .gitignore  README.md  docker-compose.canary.yml  docker-compose.gpu.yml  docker-compose.yml  justfile  start.sh
backend/: Dockerfile  Dockerfile.playwright-base  db.py  download_models.py  entrypoint.sh  main.py  pyproject.toml  transcriber.py
backend/audio/: __init__.py  models.py  pipeline.py
backend/data/: app.db
backend/engines/: canary_engine.py  faster_whisper_engine.py  qwen_audio_engine.py  whisper_engine.py
backend/extractors/: audio.py  video.py  youtube.py
backend/llm/: prompts.py
backend/static/: app.js  index.html  style.css
backend/tts/: engine.py  preprocess.py  voices.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: EnhancementPanel.css  EnhancementPanel.tsx
frontend/src/pages/: Batch.tsx  Download.css  Download.tsx  Enhance.css  Enhance.tsx  Home.tsx  Pipeline.css  Pipeline.tsx  Settings.css  Settings.tsx  Summarize.css  Summarize.tsx  TTS.css  TTS.tsx  Transcribe.tsx
frontend/src/types/: index.ts
unraid/: lumina.xml
